--- a/compragamer/css/productos.css
+++ b/compragamer/css/productos.css
@@ -198,8 +198,9 @@
 
 /* Products Content */
 .products-content {
-    flex: 1;
+    flex: 1 1 0%;
     min-width: 0;
+    width: 0;
     min-height: 400px;
 }
 
